[package]
name = "unwindtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = { version = "0.3",  features = ["gimli-symbolize", "libunwind"] }

[lib]
name = "test"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]